--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "dependencies": {
     "axios": "^1.4.0",
     "chai": "^4.3.7",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-fetch": "^3.3.1",
+    "nodemon": "^2.0.22"
   },
   "scripts": {
-    "test": "mocha"
+    "start": "nodemon ./src/routes/index"
   }
 }
