--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fullcalendar": "^6.1.8",
     "mocha": "^10.2.0",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.1",
