--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "fullcalendar": "^6.1.8",
     "mocha": "^10.2.0",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22"
