--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mocha": "^10.2.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22"
   },
